Changed color of 'Liability for content'

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -93,7 +93,7 @@
     <div class="columns">
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-warning">
+                <article class="tile is-child notification is-danger">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
                             Liability for content
