Wrote disqus card

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -108,12 +108,24 @@
         </div>
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-link">
+                <article class="tile is-child notification is-success">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
-                            ...
+                            Disqus
                         </div>
-                        BLA ...
+                        <a href="https://disqus.com/">Disqus</a> offers a discussion and commenting platform as a scripted add-on tool for websites.
+                        <br/>
+                        Simpler said: <a href="https://disqus.com/">Disqus</a> enabled comments on blog posts!
+                        <br/><br/>
+                        <a href="https://disqus.com/">Disqus</a> is in full control of your data, nothing is stored on my servers.
+                        Furthermore, links to internal and external pages, as well as social media sides, are provided by <a href="https://disqus.com/">Disqus</a> or <a href="https://disqus.com/">Disqus</a> users.
+                        <br/>
+                        Content (i.e. comments) are posted by <a href="https://disqus.com/">Disqus</a> users.
+                        I will periodically screen those, but it should be clear that they are <b>not my content</b>.
+                        <br/>
+                        For further information, please consider <a href="https://disqus.com/">Disqus</a>' <a href="https://help.disqus.com/en/articles/1717103-disqus-privacy-policy">privacy policy</a>.
+                        <br/><br/>
+                        This feature of my blog is fully optional.
                     </div>
                 </article>
             </div>
