--- a/themes/aether/layout/_partial/article-full.ejs
+++ b/themes/aether/layout/_partial/article-full.ejs
@@ -1,27 +1,27 @@
-<%=/* Article Full */%>
-<%=/* Shown when a post is clicked on. */%>
+<%=/* Article Full */%> 
+<%=/* Shown when a post is clicked on. */%> 
 <%=/* Shows the full post. */%>
 
-<div class="blog-post">
-    <section class="hero is-info is-bold">
-        <div class="hero-body">
-          <div class="container">
-            <h1 class="title">
-              <%- item.title || item.link%>
-            </h1>
-            <h2 class="subtitle">
-              <%= item.date.format(config.date_format) %>
-            </h2>
+<div id="blog-post">
+  <section class="hero is-info is-bold">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          <%- item.title || item.link%>
+        </h1>
+        <h2 class="subtitle">
+          <%= item.date.format(config.date_format) %>
+        </h2>
 
-            <%- partial('article-tags', {item: item}) %>
-            <%- partial('article-categories', {item: item}) %>
-          </div>
-        </div>
-      </section>
+        <%- partial('article-categories', {item: item}) %> <%-
+        partial('article-tags', {item: item}) %>
+      </div>
+    </div>
+  </section>
 
+  <div id="content">
     <%- item.content %>
-    
-    <hr />
+  </div>
 
-    <%- partial('mod/disqus_comments') %>
+  <%- partial('mod/disqus_comments') %>
 </div>
