--- a/themes/aether/layout/_partial/pagination.ejs
+++ b/themes/aether/layout/_partial/pagination.ejs
@@ -1,10 +1,11 @@
 <%=/* Paginator */%>
 <%=/* Used to switch between pages of blog posts */%>
-<nav class="pagination is-centered" role="navigation" aria-label="pagination">
-    <a href="<%- config.root %><%- page.prev_link %>" class="pagination-link pagination-previous" aria-label="previous page" <%if (!page.prev) { %>disabled<% } %>>Previous page</a>
-    <a href="<%- config.root %><%- page.next_link %>" class="pagination-link pagination-next" aria-label="next page" <%if (!page.next){ %>disabled<% } %>>Next page</a>
 
+<nav class="pagination is-centered" role="navigation" aria-label="pagination">
     <ul class="pagination-list">
+      <li>
+        <a href="<%- config.root %><%- page.prev_link %>" class="pagination-link pagination-previous" aria-label="previous page" <%if (!page.prev) { %>disabled<% } %>>&laquo;</a>
+      </li>
       <li>
         <a href="/" class="pagination-link" aria-label="Goto page 1" <%if (page.current == 1) { %>disabled<% } %>>1</a>
       </li>
@@ -19,6 +20,9 @@
       </li>  
       <li>
         <a href="/page/<%=page.total%>/" class="pagination-link" aria-label="Goto page <%= page.total %>" <%if (page.current == page.total) { %>disabled<% } %>><%=page.total%></a>
+      </li>
+      <li>
+        <a href="<%- config.root %><%- page.next_link %>" class="pagination-link pagination-next" aria-label="next page" <%if (!page.next){ %>disabled<% } %>>&raquo;</a>
       </li>
     </ul>
 </nav>
