Adjusted open-source and hexo car

--- a/themes/aether/layout/credit.ejs
+++ b/themes/aether/layout/credit.ejs
@@ -2,62 +2,51 @@
 <%=/* Credit page. */%>
 
 <div id="credit">
-    <section className="hero is-medium is-dark is-bold">
-      <div className="hero-body">
-        <div className="container">
-          <h1 className="title">Credits</h1>
-          <h2 className="subtitle">Building blocks of this website</h2>
+    <section class="hero is-medium is-dark is-bold">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">Credits</h1>
+          <h2 class="subtitle">Building blocks of this website</h2>
         </div>
       </div>
     </section>
 
-    <div className="tile is-parent">
-      <div className="tile is-parent">
-        <article className="tile is-child notification is-white">
-          <h1 className="title">Open-Source</h1>
-          <p className="subtitle" />
-          <div className="content">
+    <div class="tile is-parent">
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-dark">
+          <h1 class="title">Open-Source</h1>
+          <p class="subtitle" />
+          <div class="content">
             The entire source code of my website is Open-Source, licensed
-            under{" "}
-            <Link to="https://choosealicense.com/licenses/mit/">MIT</Link>{" "}
-            and can be found on my{" "}
-            <Link to="https://gitlab.com/sakul6499.de/sakul6499.de/">
-              GitLab repository
-            </Link>
-            .
+            under <a href="https://choosealicense.com/licenses/mit/">MIT</a> and can be found on my <a href="https://gitlab.com/sakul6499.de/website/">GitLab repository</a>.
           </div>
         </article>
       </div>
     </div>
 
-    <div className="tile is-parent">
-      <div className="tile is-parent">
-        <article className="tile is-child notification is-primary">
-          <h1 className="title">ReactJS</h1>
-          <p className="subtitle">JS library for UIs</p>
-          <div className="content">
-            This website is build using ReactJS,{" "}
-            <em>a JavaScript library for building user interfaces</em>.
-            <br />
-            NodeJS and yarn are used for dependencies and to pack everything
-            together into one website.
-            <br />
-            Instead of JavaScript I use TypeScript,{" "}
-            <em>
-              a typed superset of JavaScript that compiles to plain
-              JavaScript
-            </em>
-            .
+    <div class="tile is-parent">
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-success">
+          <h1 class="title">Hexo</h1>
+          <p class="subtitle">Blog Framework</p>
+          <div class="content">
+            This website is build using <a href="https://hexo.io/">Hexo</a>, <em>a fast, simple & powerful blog framework powered by Node.js</em>.
+            <br/>
+            Using <a href="https://hexo.io/">Hexo</a> is incredibly easy and enables fast development of blogs.
+            Meanwhile, it is also extremely extensible.
+            <br/><br/>
+            A <a href="https://hexo.io/">Hexo</a> blog mainly consist out of Markdown-files (Blog-Posts) and the theme.
+            Both can be found on my <a href="https://gitlab.com/sakul6499.de/website">GitLab repository</a>.
           </div>
         </article>
       </div>
-      <div className="tile is-parent">
-        <article className="tile is-child notification is-info">
-          <h1 className="title">Bulma</h1>
-          <p className="subtitle">CSS Framework</p>
-          <div className="content">
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-info">
+          <h1 class="title">Bulma</h1>
+          <p class="subtitle">CSS Framework</p>
+          <div class="content">
             This website is designed using{" "}
-            <Link to="https://bulma.io/">Bulma</Link>,{" "}
+            <a href="https://bulma.io/">Bulma</a>,{" "}
             <em>a free, open source CSS framework based on Flexbox</em>.
             <br />
             Bulma makes it extremely easy to design responsive (flex)
@@ -70,93 +59,93 @@
       </div>
     </div>
 
-    <div className="tile is-parent">
-      <div className="tile is-parent">
-        <article className="tile is-child notification is-warning">
-          <h1 className="title">Trianglify</h1>
-          <p className="subtitle">Headers</p>
-          <div className="content">
+    <div class="tile is-parent">
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-warning">
+          <h1 class="title">Trianglify</h1>
+          <p class="subtitle">Headers</p>
+          <div class="content">
             Have you seen these fancy headers on the{" "}
-            <Link to="/">main page</Link> and my{" "}
-            <Link to="/blog">blog</Link>?
+            <a href="/">main page</a> and my{" "}
+            <a href="/blog">blog</a>?
             <br />
             These are made with{" "}
-            <Link to="https://trianglify.io/">Trianglify</Link>!
+            <a href="https://trianglify.io/">Trianglify</a>!
             <br />
             Checkout there{" "}
-            <Link to="https://github.com/qrohlf/trianglify">
+            <a href="https://github.com/qrohlf/trianglify">
               GitHub repository
-            </Link>{" "}
+            </a>{" "}
             and{" "}
-            <Link to="https://www.npmjs.com/package/trianglify">
+            <a href="https://www.npmjs.com/package/trianglify">
               NPM package
-            </Link>
+            </a>
             .
           </div>
         </article>
       </div>
-      <div className="tile is-parent">
-        <article className="tile is-child notification is-danger">
-          <h1 className="title">Icons</h1>
-          <p className="subtitle" />
-          <div className="content">
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-danger">
+          <h1 class="title">Icons</h1>
+          <p class="subtitle" />
+          <div class="content">
             Most, if not all, icons are provided by{" "}
-            <Link to="https://react-icons.netlify.com/#/">React-Icons</Link>
+            <a href="https://react-icons.netlify.com/#/">React-Icons</a>
             , which lets you{" "}
             <em>include popular icons in your React projects easily</em>.
             <br />
             It supports multiple icon libraries, such as:
             <ul>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/fa">
+                <a href="https://react-icons.netlify.com/#/icons/fa">
                   Font Awesome
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/io">
+                <a href="https://react-icons.netlify.com/#/icons/io">
                   Ionicons
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/md">
+                <a href="https://react-icons.netlify.com/#/icons/md">
                   Material Design Icons
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/ti">
+                <a href="https://react-icons.netlify.com/#/icons/ti">
                   Typicons
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/go">
+                <a href="https://react-icons.netlify.com/#/icons/go">
                   Github Octiocons Icons
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/fi">
+                <a href="https://react-icons.netlify.com/#/icons/fi">
                   Feather
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/gi">
+                <a href="https://react-icons.netlify.com/#/icons/gi">
                   Game Icons
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/wi">
+                <a href="https://react-icons.netlify.com/#/icons/wi">
                   Weather Icons
-                </Link>
+                </a>
               </li>
               <li>
-                <Link to="https://react-icons.netlify.com/#/icons/di">
+                <a href="https://react-icons.netlify.com/#/icons/di">
                   Devicons
-                </Link>
+                </a>
               </li>
             </ul>
             There even is a{" "}
-            <Link to="https://www.npmjs.com/package/react-icons">
+            <a href="https://www.npmjs.com/package/react-icons">
               NPM Package
-            </Link>{" "}
+            </a>{" "}
             for it!
           </div>
         </article>
