Updated Bulma card

--- a/themes/aether/layout/credit.ejs
+++ b/themes/aether/layout/credit.ejs
@@ -23,7 +23,6 @@
         </article>
       </div>
     </div>
-
     <div class="tile is-parent">
       <div class="tile is-parent">
         <article class="tile is-child notification is-success">
@@ -45,20 +44,16 @@
           <h1 class="title">Bulma</h1>
           <p class="subtitle">CSS Framework</p>
           <div class="content">
-            This website is designed using{" "}
-            <a href="https://bulma.io/">Bulma</a>,{" "}
-            <em>a free, open source CSS framework based on Flexbox</em>.
+            This website is designed with <a href="https://bulma.io/">Bulma</a>, <em>a free, open source CSS framework based on Flexbox</em>.
             <br />
-            Bulma makes it extremely easy to design responsive (flex)
-            user-interfaces. It is even possible to create websites without
-            own stylesheets.
-            <br />I still added some things myself and modified some of the
-            component, but this websites design-core is Bulma.
+            <a href="https://bulma.io/">Bulma</a> makes it extremely easy to design responsive (flex) user-interfaces. 
+            It is even possible to create websites without own stylesheets.
+            <br />
+            I still added some things myself and modified some of the component, but this websites design-core is <a href="https://bulma.io/">Bulma</a>.
           </div>
         </article>
       </div>
     </div>
-
     <div class="tile is-parent">
       <div class="tile is-parent">
         <article class="tile is-child notification is-warning">
