--- a/themes/aether/layout/credit.ejs
+++ b/themes/aether/layout/credit.ejs
@@ -3,147 +3,60 @@
 
 <div id="credit">
     <section class="hero is-medium is-dark is-bold">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title">Credits</h1>
-          <h2 class="subtitle">Building blocks of this website</h2>
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">Credits</h1>
+                <h2 class="subtitle">Building blocks of this website</h2>
+            </div>
         </div>
-      </div>
     </section>
-
     <div class="tile is-parent">
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-dark">
-          <h1 class="title">Open-Source</h1>
-          <p class="subtitle" />
-          <div class="content">
-            The entire source code of my website is Open-Source, licensed
-            under <a href="https://choosealicense.com/licenses/mit/">MIT</a> and can be found on my <a href="https://gitlab.com/sakul6499.de/website/">GitLab repository</a>.
-          </div>
-        </article>
-      </div>
+        <div class="tile is-parent">
+            <article class="tile is-child notification is-dark">
+                <h1 class="title">Open-Source</h1>
+                <p class="subtitle" />
+                <div class="content">
+                    The entire source code of my website is Open-Source, licensed
+                    under <a href="https://choosealicense.com/licenses/mit/">MIT</a> and can be found on my <a
+                        href="https://gitlab.com/sakul6499.de/website/">GitLab repository</a>.
+                </div>
+            </article>
+        </div>
     </div>
     <div class="tile is-parent">
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-success">
-          <h1 class="title">Hexo</h1>
-          <p class="subtitle">Blog Framework</p>
-          <div class="content">
-            This website is build using <a href="https://hexo.io/">Hexo</a>, <em>a fast, simple & powerful blog framework powered by Node.js</em>.
-            <br/>
-            Using <a href="https://hexo.io/">Hexo</a> is incredibly easy and enables fast development of blogs.
-            Meanwhile, it is also extremely extensible.
-            <br/><br/>
-            A <a href="https://hexo.io/">Hexo</a> blog mainly consist out of Markdown-files (Blog-Posts) and the theme.
-            Both can be found on my <a href="https://gitlab.com/sakul6499.de/website">GitLab repository</a>.
-          </div>
-        </article>
-      </div>
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-info">
-          <h1 class="title">Bulma</h1>
-          <p class="subtitle">CSS Framework</p>
-          <div class="content">
-            This website is designed with <a href="https://bulma.io/">Bulma</a>, <em>a free, open source CSS framework based on Flexbox</em>.
-            <br />
-            <a href="https://bulma.io/">Bulma</a> makes it extremely easy to design responsive (flex) user-interfaces. 
-            It is even possible to create websites without own stylesheets.
-            <br />
-            I still added some things myself and modified some of the component, but this websites design-core is <a href="https://bulma.io/">Bulma</a>.
-          </div>
-        </article>
-      </div>
+        <div class="tile is-parent">
+            <article class="tile is-child notification is-info">
+                <h1 class="title">Hexo</h1>
+                <p class="subtitle">Blog Framework</p>
+                <div class="content">
+                    This website is build using <a href="https://hexo.io/">Hexo</a>, <em>a fast, simple & powerful blog
+                        framework powered by Node.js</em>.
+                    <br />
+                    Using <a href="https://hexo.io/">Hexo</a> is incredibly easy and enables fast development of blogs.
+                    Meanwhile, it is also extremely extensible.
+                    <br /><br />
+                    A <a href="https://hexo.io/">Hexo</a> blog mainly consist out of Markdown-files (Blog-Posts) and the
+                    theme.
+                    Both can be found on my <a href="https://gitlab.com/sakul6499.de/website">GitLab repository</a>.
+                </div>
+            </article>
+        </div>
+        <div class="tile is-parent">
+            <article class="tile is-child notification is-success">
+                <h1 class="title">Bulma</h1>
+                <p class="subtitle">CSS Framework</p>
+                <div class="content">
+                    This website is designed with <a href="https://bulma.io/">Bulma</a>, <em>a free, open source CSS
+                        framework based on Flexbox</em>.
+                    <br />
+                    <a href="https://bulma.io/">Bulma</a> makes it extremely easy to design responsive (flex)
+                    user-interfaces.
+                    It is even possible to create websites without own stylesheets.
+                    <br />
+                    I still added some things myself and modified some of the component, but this websites design-core
+                    is <a href="https://bulma.io/">Bulma</a>.
+                </div>
+            </article>
+        </div>
     </div>
-    <div class="tile is-parent">
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-warning">
-          <h1 class="title">Trianglify</h1>
-          <p class="subtitle">Headers</p>
-          <div class="content">
-            Have you seen these fancy headers on the{" "}
-            <a href="/">main page</a> and my{" "}
-            <a href="/blog">blog</a>?
-            <br />
-            These are made with{" "}
-            <a href="https://trianglify.io/">Trianglify</a>!
-            <br />
-            Checkout there{" "}
-            <a href="https://github.com/qrohlf/trianglify">
-              GitHub repository
-            </a>{" "}
-            and{" "}
-            <a href="https://www.npmjs.com/package/trianglify">
-              NPM package
-            </a>
-            .
-          </div>
-        </article>
-      </div>
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-danger">
-          <h1 class="title">Icons</h1>
-          <p class="subtitle" />
-          <div class="content">
-            Most, if not all, icons are provided by{" "}
-            <a href="https://react-icons.netlify.com/#/">React-Icons</a>
-            , which lets you{" "}
-            <em>include popular icons in your React projects easily</em>.
-            <br />
-            It supports multiple icon libraries, such as:
-            <ul>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/fa">
-                  Font Awesome
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/io">
-                  Ionicons
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/md">
-                  Material Design Icons
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/ti">
-                  Typicons
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/go">
-                  Github Octiocons Icons
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/fi">
-                  Feather
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/gi">
-                  Game Icons
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/wi">
-                  Weather Icons
-                </a>
-              </li>
-              <li>
-                <a href="https://react-icons.netlify.com/#/icons/di">
-                  Devicons
-                </a>
-              </li>
-            </ul>
-            There even is a{" "}
-            <a href="https://www.npmjs.com/package/react-icons">
-              NPM Package
-            </a>{" "}
-            for it!
-          </div>
-        </article>
-      </div>
-    </div>
-  </div>
+</div>
