Added margin to top of content

--- a/themes/aether/source/sass/style.sass
+++ b/themes/aether/source/sass/style.sass
@@ -93,6 +93,7 @@ $footer-spacing: 4%
         a
             color: whitesmoke
     #content
+        margin-top: $page-margin
         margin-left: $page-margin
         margin-right: $page-margin
 
