--- a/themes/aether/source/sass/style.sass
+++ b/themes/aether/source/sass/style.sass
@@ -117,30 +117,36 @@ $footer-spacing: 4%
       border-right: solid black
 
 #timeline 
-  width: 100%
-  padding-top: 16px
-  .entry 
     width: 100%
-    display: inline-block
-    .date 
-      width: 25%
-      display: inline-block
-    .texts 
-      width: 75%
-      display: inline-block
-      border-left: solid magenta 4px
-      div 
-        @media screen and (max-width: $tablet) 
-          font-size: 0.8rem
-        @media screen and (min-width: $tablet) 
-          font-size: 1.25rem
-  .dotted 
-    width: 75%
-    margin-left: 25%
-    height: 32px
-    border-left: dotted magenta 4px
-  .spacing 
-    width: 75%
-    margin-left: 25%
     padding-top: 16px
-    border-left: solid magenta 4px
+    .entry 
+        width: 100%
+        display: inline-block
+        .date 
+            width: 25%
+            display: inline-block
+        .texts 
+            width: 75%
+            display: inline-block
+            div 
+                @media screen and (max-width: $tablet) 
+                    font-size: 0.8rem
+                @media screen and (min-width: $tablet) 
+                    font-size: 1.25rem
+        .tag
+            margin-top: 8px
+            margin-bottom: 8px
+    .solid-line
+        height: 32px
+        margin-left: 50%
+        border-left: solid magenta 4px
+        & + .tag
+            margin-top: 8px 
+            margin-bottom: 8px
+    .dotted-line
+        height: 32px
+        margin-left: 50%
+        border-left: dotted magenta 4px
+        & + .tag
+            margin-top: 8px 
+            margin-bottom: 8px
