--- a/themes/aether/layout/about.ejs
+++ b/themes/aether/layout/about.ejs
@@ -1,3 +1,5 @@
+<%# About-Me page %>
+
 <section class="columns has-text-centered" id="AboutMe">
   <article class="column">
     <div>
@@ -5,21 +7,19 @@
         About me
       </u>
       <p>
-        Hello there! My name is Lukas Weber and I am {years} years old.
-        Currently, I live in Germany, but I study{" "}
-        <i>Software Engineering</i> in the Netherlands. I am interested in
-        a lot of topics, mainly IT related, which is also why I taught
-        myself a lot of skills and am constantly learning new things!
+        Hello there! My name is Lukas Weber and I am <%= new
+        Date().getFullYear() - new Date("1999-04-06").getFullYear() %> years
+        old. Currently, I live in Germany, but I am studying
+        <i>Software Engineering</i> in the Netherlands. I am interested in a lot
+        of topics, mainly IT related, which is also why I taught myself a lot of
+        skills already and am continually learning new things!
       </p>
       <br />
+      <p>I am currently also in need of an internship.</p>
       <p>
-        Interested? Send me an <a href="mailto:me@sakul6499.de">e-mail</a>
-        !
-      </p>
-      <p>
-        I can also be found on{" "}
-        <a href="https://keybase.io/sakul6499">KeyBase</a> and{" "}
-        <a href="https://t.me/sakul6499">Telegram</a>.
+        Interested? Contact me via <a href="mailto:me@sakul6499.de">Email</a>,
+        <a href="https://t.me/sakul6499">Telegram</a> or
+        <a href="https://keybase.io/sakul6499">KeyBase</a>.
       </p>
     </div>
     <%- partial('_partial/timeline.ejs') %>
