Fixed white-on-white button/tag

--- a/themes/aether/layout/_partial/skills.ejs
+++ b/themes/aether/layout/_partial/skills.ejs
@@ -114,6 +114,7 @@
       <div
         class="tag is-half is-family-code tooltip is-white has-tooltip-white is-medium is-tooltip-multiline has-text-black"
         data-tooltip="Docker, Vagrant, VirtualBox, VMWare products (Workstation, ESXi), libVirt/QEMU, Kubernetes, ..."
+        style="border: 1px solid black"
       >Virtualization</div>
     </section>
 
