--- a/themes/aether/layout/_partial/skills.ejs
+++ b/themes/aether/layout/_partial/skills.ejs
@@ -7,9 +7,7 @@
     Skills
   </u>
 
-  <h1 class="is-size-5 has-text-black">Languages I 'speak':</h1>
-
-  <h1 class="is-size-5 has-text-black">Languages I 'speak':</h1>
+  <h1 class="is-size-5 has-text-black">Languages I speak:</h1>
   <section class="column is-mobile is-centered tags">
     <div
       class="tag is-half is-family-code tooltip is-success has-tooltip-success is-large is-tooltip-multiline has-text-white"
@@ -19,6 +17,18 @@
       class="tag is-half is-family-code tooltip is-success has-tooltip-success is-large is-tooltip-multiline has-text-white"
       data-tooltip="My secondary language! B1 LCCI Business Certificate/B2 school english">English</div>
 
+    <div
+      class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline has-text-white"
+      data-tooltip="I am studying in the netherlands! Basic dutch is a must, although I mainly only understand ...">
+      Dutch</div>
+
+    <div
+      class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline has-text-white"
+      data-tooltip="Not fluent but an very interesting and different language!">Japanese</div>
+  </section>
+
+  <h1 class="is-size-5 has-text-black">Languages I <s>speak</s> code:</h1>
+  <section class="column is-mobile is-centered tags">
     <div
       class="tag is-half is-family-code tooltip is-link has-tooltip-link is-large is-tooltip-multiline has-text-white"
       data-tooltip="JVM languages and tools like Java, Kotlin, Maven and Gradle">Java</div>
@@ -43,15 +53,6 @@
     <div
       class="tag is-half is-family-code tooltip is-warning has-tooltip-warning is-small is-tooltip-multiline has-text-black"
       data-tooltip="[Z|Ba]SH, Python, Ruby, ...">Script languages</div>
-
-    <div
-      class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline has-text-white"
-      data-tooltip="I am studying in the netherlands! Basic dutch is a must, although I mainly only understand ...">
-      Dutch</div>
-
-    <div
-      class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline has-text-white"
-      data-tooltip="Not fluent but an very interesting and different language!">Japanese</div>
 
     <div
       class="tag is-half is-family-code tooltip is-info has-tooltip-info is-small is-tooltip-multiline has-text-white"
