--- a/themes/aether/layout/_partial/timeline.ejs
+++ b/themes/aether/layout/_partial/timeline.ejs
@@ -1,3 +1,6 @@
+<%# Timeline partial %>
+<%# Displays a timeline of significant events. %>
+
 <div id="timeline">
   <u class="is-half is-family-code has-text-underlined">Timeline</u>
   <div class="entry">
