Commented legal.ejs

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -1,3 +1,6 @@
+<%# Legal %>
+<%# Displays legal information about the owner (me) and this page. %>
+
 <div>
   <div class="tile is-parent">
     <article class="tile is-child notification is-dark">
