Commented credit.ejs

--- a/themes/aether/layout/credit.ejs
+++ b/themes/aether/layout/credit.ejs
@@ -1,5 +1,5 @@
 <%=/* Credit */%>
-<%=/* Credit page. */%>
+<%=/* Displays a page that credits important projects used in and on this website. */%>
 
 <div id="credit">
     <section class="hero is-medium is-dark is-bold">
