--- a/themes/aether/layout/about.ejs
+++ b/themes/aether/layout/about.ejs
@@ -1,4 +1,5 @@
 <%# About-Me page %>
+<%# Displays a page that reflects me, my skills and interests. %>
 
 <section class="columns has-text-centered" id="AboutMe">
   <article class="column">
