Commented head.ejs

--- a/themes/aether/layout/_segment/head.ejs
+++ b/themes/aether/layout/_segment/head.ejs
@@ -1,3 +1,7 @@
+<%# Head %>
+<%# Segment of the HTML head tag. %>
+<%# Includes/Imports all required resources, such as scripts and stylesheets, to be used by the website. %>
+
 <head>
   <meta charset="utf-8">
   <%
