Commented body.ejs

--- a/themes/aether/layout/_segment/body.ejs
+++ b/themes/aether/layout/_segment/body.ejs
@@ -1,3 +1,8 @@
+<%# Body %>
+<%# Segment of the HTML body tag %>
+<%# Defines the main layout of the page-body. %>
+<%# Note: Most of the actual layout is in `layout.ejs`! %>
+
 <body>
     <%- partial('_partial/header') %>
     <%- body %>
