Commented footer.ejs

--- a/themes/aether/layout/_partial/footer.ejs
+++ b/themes/aether/layout/_partial/footer.ejs
@@ -1,3 +1,6 @@
+<%=/* Footer */%>
+<%=/* Little footer for ending a page and giving some additional information, as well as links. */%>
+
 <hr>
 <div class="container has-text-centered" id="footer">
     <div class="columns">
