--- a/themes/aether/layout/_partial/article-tags.ejs
+++ b/themes/aether/layout/_partial/article-tags.ejs
@@ -1,12 +1,15 @@
+<%=/* Article - Tags */%>
+<%=/* Renders tags on pages where tags are included. */%>
+
 <% if (item.tags && item.tags.length){ %>
-    <%
+<%
         var tags = [];
         item.tags.forEach(function(tag){
             tags.push('<a href="' + config.root + tag.path + '">#' + tag.name + '</a>');
         });
     %>
-    <div class="blog-tags-container">
-        <span class="glyphicon glyphicon-tags"></span>
-        <%- tags.join(' ') %>
-    </div>
-    <% } %>
+<div class="blog-tags-container">
+    <span class="glyphicon glyphicon-tags"></span>
+    <%- tags.join(' ') %>
+</div>
+<% } %>
