--- a/themes/aether/layout/_partial/widget/search.ejs
+++ b/themes/aether/layout/_partial/widget/search.ejs
@@ -1,3 +1,6 @@
+<%=/* Search widget */%>
+<%=/* Defines a simple search bar, redirecting to google with special search filters. */%>
+
 <form class="control has-icons-left has-icons-right" action="//google.com/search" method="get" accept-charset="utf-8">
   <input class="input is-small" type="search" name="q" results="0" placeholder="<%= __('search') %>">
   <input class="input is-small" type="hidden" name="as_sitesearch" value="<%- config.url.replace(/^https?:\/\//, '') %>">  
