Added font awesome to credits

--- a/themes/aether/layout/credit.ejs
+++ b/themes/aether/layout/credit.ejs
@@ -59,4 +59,26 @@
             </article>
         </div>
     </div>
+    <div class="tile is-parent">
+        <div class="tile is-parent">
+            <article class="tile is-child notification is-warning">
+                <h1 class="title">Font Awesome</h1>
+                <p class="subtitle">Icons</p>
+                <div class="content">
+                    This website makes use of different icons.
+                    Most, if not all, are from <a href="https://fontawesome.com/">Font Awesome</a>.
+                    <br/>
+                    <a href="https://fontawesome.com/">Font Awesome</a>, in its free license model, requires you to give proper credit to all used icons and state their changes.
+                    <br/>
+                    <br/>
+                    I did introduce slight optimization on some icons, but the overall look of the icon did not change.
+                    <br/>
+                    Furthermore, some icon colors where changed to better fit the color-schema of my website.
+                    <br/>
+                    <br/>
+                    The license can be found <a href="https://fontawesome.com/license">here</a>.
+                </div>
+            </article>
+        </div>
+    </div>
 </div>
