Added note to legal page that it is extended by the credits page

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -228,3 +228,19 @@
     </div>
   </div>
 </div>
+
+<div class="container">
+  <article class="message is-danger">
+    <div class="message-header">
+      <p>Note</p>
+    </div>
+    <div class="message-body">
+      This page is extended by the <a href="/credit">credits</a> page.
+      <br/>
+      Please also consult the <a href="/credit">credits</a> page for further information about software, libraries and services used to build this website.
+      <br/>
+      <br/>
+      The <a href="/credit">credit</a> page can be found <a href="/credit">here</a>.
+    </div>
+  </article>
+</div>
