--- a/themes/aether/layout/credit.ejs
+++ b/themes/aether/layout/credit.ejs
@@ -82,3 +82,19 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <article class="message is-danger">
+      <div class="message-header">
+        <p>Note</p>
+      </div>
+      <div class="message-body">
+        This page is extended by the <a href="/legal">legal</a> page.
+        <br/>
+        Please also consult the <a href="/legal">legal</a> page for further information about this website.
+        <br/>
+        <br/>
+        The <a href="/legal">legal</a> page can be found <a href="/legal">here</a>.
+      </div>
+    </article>
+  </div>
