Added tooltip to bitbucket

--- a/themes/aether/layout/_svg/bitbucket.ejs
+++ b/themes/aether/layout/_svg/bitbucket.ejs
@@ -1,4 +1,4 @@
-<a href="<%=theme.profile.bitbucket%>">
+<a href="<%=theme.profile.bitbucket%>" class="tooltip has-tooltip-bottom" data-tooltip="BitBucket">
     <svg stroke="currentColor" 
         fill="currentColor" 
         stroke-width="0" 
