Added tooltip to gitlab

--- a/themes/aether/layout/_svg/gitlab.ejs
+++ b/themes/aether/layout/_svg/gitlab.ejs
@@ -1,4 +1,4 @@
-<a href="<%=theme.profile.gitlab%>">
+<a href="<%=theme.profile.gitlab%>" class="tooltip has-tooltip-bottom" data-tooltip="GitLab">
     <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
