--- a/themes/aether/layout/_svg/keybase.ejs
+++ b/themes/aether/layout/_svg/keybase.ejs
@@ -1,4 +1,4 @@
-<a href="<%=theme.profile.keybase%>">
+<a href="<%=theme.profile.keybase%>" class="tooltip has-tooltip-bottom" data-tooltip="KeyBase">
     <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="keybase"
         class="svg-inline--fa fa-keybase fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
         <path fill="currentColor"
