Added tooltip to linkedin

--- a/themes/aether/layout/_svg/linkedin.ejs
+++ b/themes/aether/layout/_svg/linkedin.ejs
@@ -1,4 +1,4 @@
-<a href="<%=theme.profile.linkedin%>">
+<a href="<%=theme.profile.linkedin%>" class="tooltip has-tooltip-bottom" data-tooltip="LinkedIn">
     <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
