Changed how categoriers are rendered

--- a/themes/aether/layout/_partial/article-categories.ejs
+++ b/themes/aether/layout/_partial/article-categories.ejs
@@ -10,6 +10,6 @@
     %>
 <div class="blog-categories-container">
     <span class="glyphicon glyphicon-folder-open"></span>
-    <%- categories.join(' / ') %>
+    <%- categories.join(' > ') %>
 </div>
 <% } %>
