Improved source code highlight rendering

--- a/themes/aether/source/sass/style.sass
+++ b/themes/aether/source/sass/style.sass
@@ -106,6 +106,19 @@ $footer-spacing: 4%
             margin: auto
         .gutter
             width: 5%
+        .highlight
+            overflow: auto
+            .title
+                font-size: 1em
+            .keyword
+                color: blue
+            .comment
+                color: green
+            .params
+                color: black
+            .title
+                color: black
+                font-weight: bold
 
 #disqus_thread
     margin-left: $page-margin
