Improved colors for strings in code highlight

--- a/themes/aether/source/sass/style.sass
+++ b/themes/aether/source/sass/style.sass
@@ -119,6 +119,8 @@ $footer-spacing: 4%
             .title
                 color: black
                 font-weight: bold
+            .string
+                color: salmon
 
 #disqus_thread
     margin-left: $page-margin
