--- a/static/style.sass
+++ b/static/style.sass
@@ -35,29 +35,6 @@ $footer-spacing: 4%
     5%
         top: 4vh
 
-#index
-    margin-top: 8px
-    #sidebar
-        padding-right: 16px
-    #excerpts
-        .message
-            padding-left: 8px
-            .message-header
-                &, *
-                    text-decoration: none
-                    color: white
-                span
-                    *
-                        text-decoration: none
-                    *:hover
-                        text-decoration: underline
-        *
-            text-decoration: none
-            color: black
-            .excerpt_link
-                text-decoration: underline
-                color: blue
-
 #footer
     padding-top: 32px
     padding-bottom: 32px
@@ -80,10 +57,6 @@ $footer-spacing: 4%
     a:hover
         color: white
         background-color: black
-
-.heart
-    color: red
-    font-size: 2.5vw
 
 #blog-post
     .blog-tags-container,
@@ -174,3 +147,23 @@ $footer-spacing: 4%
 
 #index-hero
     max-height: calc(100vh - 3.25rem)
+
+.no-link
+    &
+        text-decoration: none !important
+        cursor: pointer
+    &:hover
+        text-decoration: underline !important
+        cursor: pointer
+
+.fa-link
+    animation-name: rumble
+    animation-delay: 1s
+    animation-duration: 5s // 1s runtime + 4s pause
+    animation-iteration-count: infinite
+
+@keyframes rumble
+    0%, 10%, 20%, 100%
+        rotate: 0deg
+    7.5%, 12.5%
+        rotate: 15deg
