--- a/static/style.sass
+++ b/static/style.sass
@@ -167,3 +167,20 @@ $footer-spacing: 4%
         rotate: 0deg
     7.5%, 12.5%
         rotate: 15deg
+
+.code-line
+    display: block
+    clear: both
+
+    .code-line-number
+        display: block
+        clear: both
+        float: left
+        width: 32px
+        text-align: right
+        padding-right: 8px
+        border-right: 1px solid DarkGray
+
+    .code-line-text
+        display: block
+        margin-left: 42px
