--- a/static/style.sass
+++ b/static/style.sass
@@ -81,14 +81,15 @@ $footer-spacing: 4%
     @media screen and (min-width: $tablet)
         margin-top: 16px
     article
-        a
-            color: magenta
-            text-decoration: underline
+        &
             @media screen and (max-width: $tablet)
                 margin-bottom: 32px
                 border-bottom: solid black
             @media screen and (min-width: $tablet)
                 border-right: solid black
+        a
+            color: magenta
+            text-decoration: underline
 
 #timeline
     width: 100%
