Created contacts page

--- a/static/style.sass
+++ b/static/style.sass
@@ -162,3 +162,10 @@ $footer-spacing: 4%
     .code-line-text
         display: block
         margin-left: 42px
+
+#contact
+    svg
+        &, path, *
+            fill: black
+            width: 48px
+            height: 48px
